@@ -257,7 +257,7 @@ RunOnSelected <- function(x,multiple=TRUE,expr,enclos,title=NULL,...){
 gselect.list <- function(list,multiple=TRUE,title=NULL,width=200, height=500,x=420,y=2,...){
   ## gtk version of select.list()
   ## Thanks go to John Verzani for his help.
-  title <- ifelse(multiple,"Select one or more","Select one")
+  if (is.null(title)) title <- ifelse(multiple,"Select one or more","Select one")
   helper <- function(){
     ans<-new.env()
     x1<-ggroup(horizontal=FALSE) # no parent container here
